<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的应用程序</string>
    <string name="title_section1">项目</string>
    <string name="title_section2">分类</string>
    <string name="title_section3">设置</string>
    <string name="title_section4">网页</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_about">关于本软件</string>
    <string name="hello_world">Hello world!</string>
    <string name="about">这是jjhome的第一个应用</string>
    <string name="version">版本: 0.1</string>
    <string name="title_activity_item">项目详情</string>
    <string name="enter_title">输入文章标题</string>
    <string name="enter_content">输入文章内容</string>
    <string name="camera">camera</string>
    <string name="record">record</string>
    <string name="location">location</string>
    <string name="alarm">alarm</string>
    <string name="color">color</string>
    <string name="checked">checked</string>
    <string name="title_activity_color">设定颜色</string>
    <string name="delete">删除</string>
    <string name="delete_item">确定要删除 %1$d 个项目?</string>
    <string name="default_color">預設的顏色</string>
    <string name="default_color_summary">新增記事的預設顏色</string>
    <string name="default_notify">預設提醒時間</string>
    <string name="default_notify_summary">在指定的時間之前通知</string>
    <string name="title_record">语音备忘</string>
    <string name="record_play">播放</string>
    <string name="record_new">重新录音</string>
    <string name="cancel_alarm">取消闹钟</string>
    <string name="pick_time">选择时间</string>
    <string name="pick_date">选择日期</string>
    <string name="title_activity_alarm">提醒</string>

    <string-array name="notify_minutes_array">
        <item>五分鐘</item>
        <item>十分鐘</item>
        <item>二十分鐘</item>
        <item>三十分鐘</item>
        <item>六十分鐘</item>
    </string-array>
    <string-array name="notify_minutes_value_array">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="alarm_notification_title_template">提醒: %1$s</string>
    <string name="alarm_notification_placeholder_text_template">%1$s</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="action_dismiss">忽略</string>
    <string name="action_view">查看</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">清空</string>
    <string name="title_activity_location">地理位置</string>

</resources>
