<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pick_date"
            android:id="@+id/txt_alarm_date"
            android:layout_margin="5dp"
            android:onClick="pickDate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pick_time"
            android:id="@+id/txt_alarm_time"
            android:layout_margin="5dp"
            android:onClick="pickTime" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                android:id="@+id/btn_alarm_cancel"
                android:onClick="setAlarm" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"
                android:id="@+id/btn_alram_ok"
                android:onClick="setAlarm" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_alarm"
                android:id="@+id/btn_alarm_reset"
                android:onClick="setAlarm" />
        </TableRow>

    </TableLayout>

</LinearLayout>